# cmake_minimum_required(VERSION <specify CMake version here>)
project(Prove_intermedie_ASD)

set(CMAKE_CXX_STANDARD 14)

add_executable(Prove_intermedie_ASD
        "Esami completi/05-06-2023/es1_parte2.cpp"
        "Esami completi/05-06-2023/es1_parte2R.cpp"
        "Esami completi/05-06-2023/es1_parte2RR.cpp"
        "Esami completi/05-06-2023/es1_parte2RRR.cpp"
        "Esami completi/06-06-2022/es1_pt2.cpp"
        "Esami completi/06-06-2022/es1_pt2R.cpp"
        "Esami completi/06-06-2022/es1_pt2RR.cpp"
        "Esami completi/08-06-2020/es1.cpp"
        "Esami completi/08-06-2024/es1_pt2.cpp"
        "Esami completi/08-06-2024/es1_pt2R.cpp"
        "Esami completi/10-01-2023/es1_pt2.cpp"
        "Esami completi/10-01-2023/es1_pt2R.cpp"
        "Esami completi/10-01-2023/es1_pt2RR.cpp"
        "Esami completi/11-09-2023/es1_pt2.cpp"
        "Esami completi/11-09-2023/es1_pt2R.cpp"
        "Esami completi/12-09-2022/es1_pt2.cpp"
        "Esami completi/20-06-2022/es1_pt2.cpp"
        "Esami completi/20-06-2022/es2_pt2.cpp"
        "Esami completi/20-06-2023/es1_pt2.cpp"
        "Esami completi/20-06-2023/es1_pt2R.cpp"
        "Esami completi/20-06-2023/es1_pt2RR.cpp"
        "Esami completi/20-06-2023/es2_pt2.cpp"
        "Esami completi/26-08-2021/es1_pt1.cpp"
        "Esami completi/30-06-2021/es1_pt2.cpp"
        "Primi Parziali/10-01-2023/es1.cpp"
        "Primi Parziali/10-01-2023/es1R.cpp"
        "Primi Parziali/12-01-2017/es1.cpp"
        "Primi Parziali/12-01-2017/es2.cpp"
        "Primi Parziali/13-01-2020/es1.cpp"
        "Primi Parziali/13-01-2020/es1R.cpp"
        "Primi Parziali/16-01-2018/es1.cpp"
        "Primi Parziali/16-01-2018/es2.cpp"
        "Primi Parziali/17-01-2022/es1.cpp"
        "Primi Parziali/17-01-2022/es1R.cpp"
        "Primi Parziali/18-01-2021/es1.cpp"
        "Primi Parziali/18-01-2021/es1R.cpp"
        "Primi Parziali/20-01-2016/es2.cpp"
        "Primi Parziali/23-01-2014/es1.cpp"
        "Primi Parziali/25-01-2019/es1.cpp"
        "Primi Parziali/25-01-2019/es1R.cpp"
        "Primi Parziali/28-01-2013/es1.cpp")
